<?xml version="1.0"?>
<package>
  <name>waypoint_follower</name>
  <version>0.0.0</version>
  <description>The waypoint_follower package</description>
  <maintainer email="rao.shrikant@gmail.com">Srikant Rao</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>styx_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>styx_msgs</run_depend>
  <run_depend>tf</run_depend>
  <export>
  </export>
</package>
